Dominique is promoter ipv begeleider

--- a/masterproef.tex
+++ b/masterproef.tex
@@ -1,9 +1,9 @@
-\documentclass[master=cws, oneside]{kulemt}
+\documentclass[master=cws, twoside]{kulemt}
 \setup{title={Programmeren en Bewijzen met Dependently Typed Talen},
   author={Toon Nolten},
-  promotor={Prof.\,dr.\,ir.\ Frank Piessens},
-  assessor={TODO},
-  assistant={Dr.\ Dominique Devriese \and Jesper Cockx}}
+  promotor={Dr.\ Dominique Devriese \and Prof.\,dr.\,ir.\ Frank Piessens},
+  assessor={Prof.\,dr.\ Marc Denecker \and Dr.\ Thomas Heyman},
+  assistant={Jesper Cockx}}
 % De volgende \setup mag verwijderd worden als geen fiche gewenst is.
 \setup{filingcard,
   translatedtitle={TODO: Programming and Proofs in Dependently Typed Languages},
