--- a/masterproef.tex
+++ b/masterproef.tex
@@ -18,6 +18,7 @@
 \usepackage[outputdir=_build]{minted}
 \usepackage{underscore}
 \usepackage{subcaption}
+\usepackage{import}
 
 % Missing unicode characters for Agda
 \usepackage{MnSymbol}
